2006-11-02 Sandro Santilli <strk@refractions.net>

	* Version.config, doc/postgis.xml, NEWS: prepared
	  for 1.1.6 release.

2006-11-02 Sandro Santilli <strk@refractions.net>

	* lwgeom/lwgeom_api.c, lwgeom/wktunparse.c: cast -1 to a char
	  to make some compilers happy about comparison with a char
	  type.

2006-10-25 10:23  mschaber

	* CHANGES, lwgeom/lwgeom_geos_c.c: fixed CAPI change that broke
	  64-bit platforms

2006-10-25 10:00  mschaber

	* CHANGES: updated changelog to reflect loader regression fix

2006-10-25 09:57  mschaber

	* regress/Makefile: Make regress test build loader and dumper as it
	  needs them

2006-10-24 12:35  strk

	* CHANGES, lwgeom/lwgeom_transform.c: use Z ordinate in
	  reprojections

2006-10-19 12:01  strk

	* CHANGES, spatial_ref_sys.sql: spatial_ref_sys.sql updated to EPSG
	  6.11.1

2006-10-14 14:22  mschaber

	* CHANGES, doc/man/pgsql2shp.1, doc/man/shp2pgsql.1,
	  loader/README.pgsql2shp, loader/README.shp2pgsql,
	  loader/pgsql2shp.c, loader/shp2pgsql.c: sanitized usage info
	  output on loader/dumper

2006-10-14 09:26  mschaber

	* CHANGES, HOWTO_RELEASE, Version.config, doc/Makefile,
	  extras/debian/rules, extras/template_gis/Makefile,
	  java/jdbc/Makefile, java/jdbc/src/org/postgis/Version.java,
	  loader/Makefile, loader/pgsql2shp.c, loader/shp2pgsql.c,
	  lwgeom/Makefile, lwgeom/Makefile.shlib: Cleaned up Version.config
	  & co.

2006-10-13 15:56  mschaber

	* CHANGES, doc/postgis.xml: updated CHANGES and doc/postgis.xml in
	  preparation of upcoming release

2006-10-13 15:35  mschaber

	* HOWTO_RELEASE: updated HOWTO_RELEASE to reflect version.

2006-10-13 14:18  mcayland

	* CHANGES: Updated CHANGES files to reflect the MingW (Win32)
	  linker fix for pgsql2hp under PostgreSQL 8.2

2006-10-11 13:35  mschaber

	* doc/postgis.xml: Added hint about template_postgis to docs,
	  thanks to Marc Cave-Ayland for contribution.

2006-10-11 11:19  mschaber

	* loader/shp2pgsql.c: fix ARC regression test failures in loader
